--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.6.0",
     "@strapi/plugin-users-permissions": "5.6.0",
-    "@strapi/provider-upload-aws-s3": "^5.6.0",
     "@strapi/strapi": "5.6.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-provider-cloudflare-r2": "^0.3.0",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
